<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_layout"
    tools:context=".MainActivity">

    <TextView
        style="@style/main_text"
        android:id="@+id/testDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/field_label"
        android:id="@+id/birthdateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdate_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testDescription" />

    <Spinner
        android:id="@+id/birthdateDaySpinner"
        style="@style/field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdateLabel" />

    <Spinner
        android:id="@+id/birthdateMonthSpinner"
        style="@style/field"
        android:entries="@array/months"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/birthdateDaySpinner"
        app:layout_constraintTop_toBottomOf="@+id/birthdateLabel" />

    <Spinner
        android:id="@+id/birthdateYearSpinner"
        style="@style/field"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/birthdateMonthSpinner"
        app:layout_constraintStart_toEndOf="@+id/birthdateMonthSpinner" />

    <TextView
        android:id="@+id/genderLabel"
        style="@style/field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdateDaySpinner" />

    <Spinner
        style="@style/field"
        android:id="@+id/genderSpinner"
        android:entries="@array/genders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onNextButtonClick" />

</androidx.constraintlayout.widget.ConstraintLayout>